# image_flow_cytometry_fine_tune

./: .gitignore  README.md  object_number.pop  pyproject.toml
0 - Feature extraction/: Data exploration.ipynb  Feature extraction.ipynb
0 - Feature extraction/compensation matrix/: channel_names.txt  compensation_matrix.ipynb  exp1.xlsx  exp2.xlsx  exp3.xlsx  exp4.xlsx
1 - Machine learning/: Channel_feature_importance.ipynb  Source Data Figure 1b.csv  XGBoost_best_model.ipynb  XGBoost_inter_doner.ipynb  machine_learning_results.ipynb
1 - Machine learning/inter-intra-rater-analysis/: ali_annotation.csv  first_round.csv  inter-intra-rater.ipynb  inter-rater-first-round.csv  inter-rater-second-round.csv  ke_annotation.csv  nikos_annotation.csv  tijana_annotation.csv  to_annotate_donor1_exp22.pop
1 - Machine learning/ml_vs_gating/: XGBoost.ipynb  gating_comparison.csv
1 - Machine learning/robustness/: batch_effect_detection.ipynb
2 - Predictions and data cleaning/: Predictions and data cleaning-Copy1.ipynb  examples_of_selected_and_rejected_images.ipynb
3 - Frequency analysis/: Frequency analysis.ipynb  Source Data Figure 2e.csv  Source Data Figure 2f.csv
4 - Feature difference analysis/: Boxplot cntrl vs Teplizumab synapses with signaling data.csv  Feature difference analysis.ipynb  Source Data Figure 3a.csv  Source Data Figure 3b-d-f.csv  Source Data Figure 3h.csv  TCD-CD19_comparison_top_features.csv
5 - Cytokine prediction/: CD19-TCB vs CD20-TCB images.ipynb  Source Data Figure 4d.csv  Source Data Figure 4e-f.csv  cytokine_production.csv
(+68 files in other folders)
