[project]
name = "image-flow-cytometry-fine-tune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.21",
    "fastai>=2.7.18",
    "fastparquet>=2024.11.0",
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "lightning==2.4.0",
    "neptune>=1.13.0",
    "numpy==1.26.4",
    "pandas<2.0",
    "peft>=0.13.2",
    "scifai @ git+https://github.com/marrlab/scifAI.git",
    "scikit-image<0.19",
    "scikit-learn<1.2.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "timm>=1.0.11",
]
